Fix permalink input field text overflow ellipsis for Firefox.

--- a/packages/editor/src/components/post-publish-panel/style.scss
+++ b/packages/editor/src/components/post-publish-panel/style.scss
@@ -152,7 +152,7 @@
 	}
 
 	input[readonly] {
-		padding: $grid-unit-20;
+		padding: $grid-unit-15;
 		background: $gray-100;
 		border-color: $gray-400;
 		overflow: hidden;
